package proto;

option java_outer_classname = "ProtoHDFS";

message BlockMeta {
    required string fileName = 1;
    required int32 blockNumber = 2;
    required int32 repNumber = 3;
    required string dataId = 4;
    required string dataIp = 5;
    required int32 port = 6;
    required bool initialized = 7;
}

message Block {
    required BlockMeta blockMeta = 1;
    optional string blockContents = 2;
}

message Pipeline {
    required int32 pipelineNumber = 1;
    repeated Block blocks = 2;
}

message FileHandle {
    required string fileName = 1;
    required int64 fileSize = 2;
    repeated Pipeline pipelines = 3;
}

message Request {
    required string requestId = 1;
    enum RequestType {
        READ = 0;
        WRITE = 1;
        UPDATE = 2;
        APPEND = 3;
        DELETE = 4;
        CLOSE = 5;
        LIST = 6;
    }
    required RequestType requestType = 2;
    optional FileHandle fileHandle = 3;
    repeated Block block = 4;
}

message Response {
    required string responseId = 1;
    enum ResponseType {
        SUCCESS = 0;
        FAILURE = 1;
    }
    required ResponseType responseType = 2;
    optional FileHandle fileHandle = 3;
    optional Block block = 4;
    optional string errorMessage = 5;
}

message ListResponse {
    required string responseId = 1;
    enum ResponseType {
        SUCCESS = 0;
        FAILURE = 1;
    }
    required ResponseType responseType = 2;
    optional string errorMessage = 3;
    repeated string fileNames = 4;
}

message NodeMeta {
    required string id = 1;
    required string ip = 2;
    required int32 port = 3;
}

message Heartbeat {
    required NodeMeta dataNodeMeta = 1;
}

message BlockReport {
    required string dataId = 1;
    repeated BlockMeta dataNodeBlocks = 2;
}

